// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > invalid width 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "'nope' is not a integer

Error: {"_tag":"InvalidValue","error":{"_tag":"Paragraph","value":{"_tag":"Text","value":"'nope' is not a integer"}}}
",
  "stdout": "",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > list help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "tui-stories

tui-stories 0.1.0

USAGE

$ list --path text [(-o, --output auto | tty | alt-screen | ci | ci-plain | log | json | ndjson)]

DESCRIPTION

List all discovered stories

OPTIONS

--path text

  A user-defined piece of text.

  Package directory to search for stories

(-o, --output auto | tty | alt-screen | ci | ci-plain | log | json | ndjson)

  One of the following: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson

  Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson

  This setting is optional.

--completions sh | bash | fish | zsh

  One of the following: sh, bash, fish, zsh

  Generate a completion script for a specific shell.

  This setting is optional.

--log-level all | trace | debug | info | warning | error | fatal | none

  One of the following: all, trace, debug, info, warning, error, fatal, none

  Sets the minimum log level for a command.

  This setting is optional.

(-h, --help)

  A true or false value.

  Show the help documentation for a command.

  This setting is optional.

--wizard

  A true or false value.

  Start wizard mode for a command.

  This setting is optional.

--version

  A true or false value.

  Show the version of the application.

  This setting is optional.

",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > missing path 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "Expected to find option: '--path'

Error: {"_tag":"MissingValue","error":{"_tag":"Paragraph","value":{"_tag":"Text","value":"Expected to find option: '--path'"}}}
",
  "stdout": "",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > root help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "tui-stories

tui-stories 0.1.0

USAGE

$ tui-stories

DESCRIPTION

Headless TUI story runner — render Storybook stories in the terminal

OPTIONS

--completions sh | bash | fish | zsh

  One of the following: sh, bash, fish, zsh

  Generate a completion script for a specific shell.

  This setting is optional.

--log-level all | trace | debug | info | warning | error | fatal | none

  One of the following: all, trace, debug, info, warning, error, fatal, none

  Sets the minimum log level for a command.

  This setting is optional.

(-h, --help)

  A true or false value.

  Show the help documentation for a command.

  This setting is optional.

--wizard

  A true or false value.

  Start wizard mode for a command.

  This setting is optional.

--version

  A true or false value.

  Show the version of the application.

  This setting is optional.

COMMANDS

  - list --path text [(-o, --output auto | tty | alt-screen | ci | ci-plain | log | json | ndjson)]                                                                                                         List all discovered stories

  - render [(-s, --story text)] --path text [(-w, --width integer)] [(-o, --output auto | tty | alt-screen | ci | ci-plain | log | json | ndjson)] [--final] [--at integer] (-a, --arg text)... <story-id>  Render a story to terminal output

  - inspect --path text [(-o, --output auto | tty | alt-screen | ci | ci-plain | log | json | ndjson)] <story-id>                                                                                           Inspect story metadata and available args

",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > version 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "0.1.0

",
}
`;
